# src/Web.Api/Controllers/PayrollRecords/Contracts/GetPayrollRecordCalculationDetailsResponse.cs
@@ -32,6 +32,8 @@ public record GetPayrollRecordCalculationDetailsResponse(
     decimal MaxMonthlyOvertimeHours,
     decimal MaxFridayHours,
     decimal MaxNightShiftHours,
+    decimal MaxMissionDaysCount,
+    decimal MaxHolidayWorkHours,
     decimal DailyWorkingHours,
     DateOnly DecreeEffectiveFrom,
     decimal BaseDailySalary,
